消息模块对接后端开发初步完成

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
         "enhance": false,
         "postcss": false,
         "preloadBackgroundData": false,
-        "minified": false,
+        "minified": true,
         "newFeature": false,
         "coverView": true,
         "nodeModules": true,
@@ -35,9 +35,9 @@
         "userConfirmedBundleSwitch": false,
         "packNpmManually": false,
         "packNpmRelationList": [],
-        "minifyWXSS": false,
+        "minifyWXSS": true,
         "disableUseStrict": false,
-        "minifyWXML": false,
+        "minifyWXML": true,
         "showES6CompileOption": false,
         "useCompilerPlugins": false
     },
