--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2",
-    "taro-axios": "^1.1.1"
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
