--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tarojs/shared": "3.6.2",
     "@tarojs/taro": "3.6.2",
     "babel-plugin-import": "^1.13.6",
+    "element-china-area-data": "^5.0.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
