解决h5端报错、升级taro版本、降低weapp端打包体积

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tssd",
+  "name": "rtt",
   "version": "1.0.0",
   "private": true,
-  "description": "tssd",
+  "description": "rtt",
   "templateInfo": {
     "name": "default",
     "typescript": true,
@@ -35,51 +35,52 @@
   ],
   "author": "",
   "dependencies": {
-    "@antmjs/vantui": "^2.5.4",
+    "@antmjs/vantui": "^2.5.6",
     "@babel/runtime": "^7.7.7",
     "@reduxjs/toolkit": "^1.9.3",
-    "@tarojs/components": "3.6.2",
-    "@tarojs/helper": "3.6.2",
-    "@tarojs/plugin-framework-react": "3.6.2",
-    "@tarojs/plugin-html": "^3.6.2",
-    "@tarojs/plugin-platform-alipay": "3.6.2",
-    "@tarojs/plugin-platform-h5": "3.6.2",
-    "@tarojs/plugin-platform-jd": "3.6.2",
-    "@tarojs/plugin-platform-qq": "3.6.2",
-    "@tarojs/plugin-platform-swan": "3.6.2",
-    "@tarojs/plugin-platform-tt": "3.6.2",
-    "@tarojs/plugin-platform-weapp": "3.6.2",
-    "@tarojs/react": "3.6.2",
-    "@tarojs/runtime": "3.6.2",
-    "@tarojs/shared": "3.6.2",
-    "@tarojs/taro": "3.6.2",
+    "@tarojs/components": "3.6.5-alpha.2",
+    "@tarojs/helper": "3.6.5-alpha.2",
+    "@tarojs/plugin-framework-react": "3.6.5-alpha.2",
+    "@tarojs/plugin-html": "^3.6.5",
+    "@tarojs/plugin-platform-alipay": "3.6.5-alpha.2",
+    "@tarojs/plugin-platform-h5": "3.6.5-alpha.2",
+    "@tarojs/plugin-platform-jd": "3.6.5-alpha.2",
+    "@tarojs/plugin-platform-qq": "3.6.5-alpha.2",
+    "@tarojs/plugin-platform-swan": "3.6.5-alpha.2",
+    "@tarojs/plugin-platform-tt": "3.6.5-alpha.2",
+    "@tarojs/plugin-platform-weapp": "3.6.5-alpha.2",
+    "@tarojs/react": "3.6.5-alpha.2",
+    "@tarojs/runtime": "3.6.5-alpha.2",
+    "@tarojs/shared": "3.6.5-alpha.2",
+    "@tarojs/taro": "3.6.5-alpha.2",
     "babel-plugin-import": "^1.13.6",
     "element-china-area-data": "^5.0.2",
-    "http-proxy-middleware": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/cli": "3.6.2",
-    "@tarojs/webpack5-runner": "3.6.2",
+    "@tarojs/cli": "3.6.5-alpha.2",
+    "@tarojs/webpack5-runner": "3.6.5-alpha.2",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.6.2",
+    "babel-preset-taro": "3.6.5-alpha.2",
     "eslint": "^8.12.0",
-    "eslint-config-taro": "3.6.2",
+    "eslint-config-taro": "3.6.5-alpha.2",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.18",
     "react-refresh": "^0.11.0",
     "stylelint": "^14.4.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.1.0",
-    "webpack": "5.69.0"
+    "webpack": "5.78.0"
   }
 }
