--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "author": "",
   "dependencies": {
-    "@antmjs/vantui": "^2.5.6",
+    "@antmjs/vantui": "^3.0.0",
     "@babel/runtime": "^7.7.7",
     "@reduxjs/toolkit": "^1.9.3",
     "@tarojs/components": "3.6.5-alpha.2",
@@ -67,6 +67,7 @@
     "@tarojs/webpack5-runner": "3.6.5-alpha.2",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.2.1",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
