--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,7 @@
         "userConfirmedBundleSwitch": false,
         "packNpmManually": false,
         "packNpmRelationList": [],
-        "minifyWXSS": true,
+        "minifyWXSS": false,
         "disableUseStrict": false,
         "minifyWXML": true,
         "showES6CompileOption": false,
