增加跑腿发布、我的订单、订单申请及同意、订单通知...解决部分h5适配问题

--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
     "description": "rtt",
     "appid": "wx7de39ae899fd1544",
     "setting": {
-        "urlCheck": true,
+        "urlCheck": false,
         "es6": false,
         "enhance": false,
         "postcss": false,
@@ -12,7 +12,7 @@
         "minified": false,
         "newFeature": false,
         "coverView": true,
-        "nodeModules": false,
+        "nodeModules": true,
         "autoAudits": false,
         "showShadowRootInWxmlPanel": true,
         "scopeDataCheck": false,
